2002-04-24  Radek Doulik  <rodo@ximian.com>

	* htmlgdkpainter.c (calc_text_width_bytes): don't assume fixed
	style characters are monospaced - this is not true with fontsets,
	fixes Ximian #23829
	(calc_text_width): likewise

2002-04-23  Larry Ewing  <lewing@ximian.com>

	* gtkhtml-propmanager.c: and keymap option menu logic.
	fix keymap logic and add reset logic.

2002-04-22  Larry Ewing  <lewing@ximian.com>

	* gtkhtml-propmanager.c: add font picker logic.

	* gtkhtml-properties.c (gtk_html_class_properties_copy): make sure
	we copy the animations setting too.

2002-04-21  Larry Ewing  <lewing@ximian.com>

	* gtkhtml-propmanager.h: new object for config handling.

	* gtkhtml-propmanager.c: see above.

2002-04-18  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (insure_paper): use default paper name in case of
	wrong translation

2002-04-18  Larry Ewing  <lewing@ximian.com>

        * htmlclueflow.c (draw_quotes): Alway draw the quote character at
	the begining of the flow don't indent it with the text.
	(plain_padding): add the quote character in the plain text output.
	(plain_padding): add #ifdef DRAW_QUOTES
	(draw_quotes): make the bars 2 pixels wide instead (should
	probably base it on font size in the future).  Remove some unused
	variables.
	
	* htmlclueflow.c (get_indent): Add #ifdef DRAW_QUOTES here for
	now.

	* htmlclueflow.c (draw_quotes): add more drawing logic.
	(is_cite): helper function to handle the cite test so that we can
	change it from the current hack when we want to.
	(get_indent): modify the indent level in cites.

	* htmlimage.c (draw): stub out some cite drawing routines.

2002-04-16  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (drag_data_received): allow drop just links of known
	protocols

2002-03-29  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (html_engine_timer_event): don't stop parsing on
	/body, no other renderers do. Fixes #21968 

	* htmlgdkpainter.c (draw_background): fix mask comparison.
